Reduce the number of opens commands for surefire